# robots

./: .gitignore  README.md  docker-compose.yml  fleet-config.toml  pyproject.toml  requirements.txt  robot.py  robot_cli.py  robot_connector.py  robot_manager.py  robots.json
robots/: __init__.py  cli.py  connector.py  manager.py  robot.py
robots/api/: app.py  routes.py
robots/cli/: __init__.py  commands.py
robots/config/: fleet-config.toml
robots/db/: __init__.py  config.py  manager.py
robots/models/: __init__.py  base.py  robot.py  robot_aspect.py  user.py
